Preventing images to break the responsive web design

--- a/app/assets/stylesheets/defaults.css.scss
+++ b/app/assets/stylesheets/defaults.css.scss
@@ -9,7 +9,7 @@ a, a:hover {
   color: $default-green;
 }
 
-iframe {
+iframe, img {
   max-width: 100%;
 }
 
